--- a/archivos_proyecto/inicio.html
+++ b/archivos_proyecto/inicio.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Conciertos - Inicio</title>
+    <title>Inicio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
 
@@ -20,6 +20,8 @@
     <nav class="centrado">
         <ul>
             <li><a href="inicio.html" class="Inicio">Inicio</a></li>
+            <li><a href="conciertos.html" class="Conciertos">Conciertos</a></li>
+            <li><a href="ayuda.html" class="Ayuda">Ayuda</a></li>
         </ul>
     </nav>
     <section>
