--- a/archivos_proyecto/ayuda.html
+++ b/archivos_proyecto/ayuda.html
@@ -12,20 +12,15 @@
         <h1>
             Ayuda
         </h1>
-        <p>
+        <h3>
             ¡Bienvenido al apartado de ayuda!
-
-Estamos aquí para brindarte todo el apoyo que necesitas. Ya sea que tengas preguntas, dudas o necesites orientación, nuestro equipo de soporte está listo para ayudarte en cada paso del camino.
-
-¿Cómo podemos ayudarte?
-
-Si tienes alguna pregunta técnica, problemas para usar nuestra plataforma o necesitas asistencia con un proyecto específico, no dudes en contactarnos. Estamos comprometidos en proporcionarte respuestas claras y soluciones efectivas.
-
-
-Estamos aquí para hacer que tu experiencia sea lo más fluida y exitosa posible. No dudes en comunicarte con nosotros a través de nuestro correo electrónico.
-
-¡Gracias por confiar en nosotros!
+        </h3>
+        <p>Estamos aquí para brindarte todo el apoyo que necesitas. Ya sea que tengas preguntas, dudas o necesites orientación, nuestro equipo de soporte está listo para ayudarte en cada paso del camino.</p>
+        <p> ¿Cómo podemos ayudarte? Si tienes alguna pregunta técnica, problemas para usar nuestra plataforma o necesitas asistencia con un proyecto específico, no dudes en contactarnos. 
+            Estamos comprometidos en proporcionarte respuestas claras y soluciones efectivas. Estamos aquí para hacer que tu experiencia sea lo más fluida y exitosa posible. 
+            No dudes en comunicarte con nosotros a través de nuestro correo electrónico.
         </p>
+        <p>¡Gracias por confiar en nosotros!    </p>
     </header>
 
     <section>
@@ -51,6 +46,10 @@ Estamos aquí para hacer que tu experiencia sea lo más fluida y exitosa posible
         </form>
     
     </section>
+
+    <footer>
+        <p>Correo electrónico: conciertosmadrid@ironhackprueba.com</p>
+        <p>Conciertos - 2023</p>
 
 </body>
 </html>
