--- a/archivos_proyecto/conciertos.html
+++ b/archivos_proyecto/conciertos.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <h1>
-                Próximos conciertos Noviembre 2023 Madrid
+                Próximos conciertos Noviembre 2023
             </h1>
         </header>
         <nav class="centrado">
@@ -27,19 +27,24 @@
                 <p>Hora: 22:00</p>
                 <p>Lugar: Wizink Center</p>
                 <p>Descripción: Natos y Waor regresan a Madrid para un épico final de gira. Tras agotar las entradas para el concierto del 30 de septiembre, los artistas han decidido añadir una nueva fecha para el 4 de noviembre. ¡No te lo pierdas!</p>
-
+            </article>
+            <section class="imagen">
+                <img src="nyw_IH.png" alt="Natos y Waor">
+            </section>
+            <article>
                 <h2>Al Safir</h2>
                 <p>Fecha: 11 de Noviembre de 2023</p>
                 <p>Hora: 22:00</p>
                 <p>Lugar: Wizink Center</p>
                 <p>Descripción: La irrupción de Al Safir en el panorama musical español es un hecho. Lejos de encasillarse en el perfil tradicional del rap, desde sus inicios ha buscado nuevas formas de crear y nuevos ritmos a los que atender.
                     El artista madrileño pegó fuerte con Blow Up en 2020 y quiere más. ¡No te lo pierdas!</p>
-
+            </article>
+            <article>
                 <h2>Hard GZ</h2>
                 <p>Fecha: 18 de Noviembre de 2023</p>
                 <p>Hora: 22:00</p>
                 <p>Lugar: Wizink Center</p>
-                <p>Descripción:Hard GZ está actualmente de gira por 1 país y tiene 18 conciertos próximos.
+                <p>Descripción: Hard GZ está actualmente de gira por 1 país y tiene 18 conciertos próximos.
                     Su próxima fecha de gira será en Madrid. ¡No te lo pierdas!</p>
             </article>
         </section>
