--- a/archivos_proyecto/conciertos.html
+++ b/archivos_proyecto/conciertos.html
@@ -29,7 +29,7 @@
                 <p>Descripción: Natos y Waor regresan a Madrid para un épico final de gira. Tras agotar las entradas para el concierto del 30 de septiembre, los artistas han decidido añadir una nueva fecha para el 4 de noviembre. ¡No te lo pierdas!</p>
             </article>
             <section class="imagen">
-                <img src="nyw_IH.png" alt="Natos y Waor">
+                <img src="nyw_IH2.png" alt="Natos y Waor">
             </section>
             <article>
                 <h2>Al Safir</h2>
