--- a/archivos_proyecto/conciertos.html
+++ b/archivos_proyecto/conciertos.html
@@ -35,10 +35,13 @@
                 <h2>Al Safir</h2>
                 <p>Fecha: 11 de Noviembre de 2023</p>
                 <p>Hora: 22:00</p>
-                <p>Lugar: Wizink Center</p>
+                <p>Lugar: Sala Cats</p>
                 <p>Descripción: La irrupción de Al Safir en el panorama musical español es un hecho. Lejos de encasillarse en el perfil tradicional del rap, desde sus inicios ha buscado nuevas formas de crear y nuevos ritmos a los que atender.
                     El artista madrileño pegó fuerte con Blow Up en 2020 y quiere más. ¡No te lo pierdas!</p>
             </article>
+            <section class="imagen">
+                <img src="alsafir_IH2.png" alt="Natos y Waor">
+            </section>
             <article>
                 <h2>Hard GZ</h2>
                 <p>Fecha: 18 de Noviembre de 2023</p>
