--- a/archivos_proyecto/conciertos.html
+++ b/archivos_proyecto/conciertos.html
@@ -50,6 +50,9 @@
                 <p>Descripción: Hard GZ está actualmente de gira por 1 país y tiene 18 conciertos próximos.
                     Su próxima fecha de gira será en Madrid. ¡No te lo pierdas!</p>
             </article>
+            <section class="imagen">
+                <img src="hardgz_IH2.png" alt="Natos y Waor">
+            </section>
         </section>
         <footer>
             <p>Conciertos - 2023</p>
