--- a/archivos_proyecto/inicio.html
+++ b/archivos_proyecto/inicio.html
@@ -27,6 +27,13 @@
     <section>
         <p> Nos vemos pronto!! </p>
     </section>
+    <section class="imagenes">
+        <p>Colaboraciones:</p>
+        <br>
+        <img src="spoti_logo.png" alt="spotify">
+        <img src="logo.png" alt="logoIH">
+        <img src="logo UAX.png" alt="logoUAX">
+    </section>
 
     <footer>
         <p>Conciertos - 2023</p>
