--- a/archivos_proyecto/inicio.html
+++ b/archivos_proyecto/inicio.html
@@ -14,8 +14,10 @@
             Bienvenido, amante de la música
         </h1>
         <p>
-            Aquí podrás encontrar información sobre los próximos conciertos que se celebrarán en Villanueva de la Cañada.
+            Aquí podrás encontrar información sobre los próximos conciertos que se celebrarán en Madrid.
         </p>
+        
+
     </header>
     <nav class="centrado">
         <ul>
@@ -24,12 +26,25 @@
             <li><a href="ayuda.html" class="Ayuda">Ayuda</a></li>
         </ul>
     </nav>
+
+    <header2>
+        <h2>
+            Eventos de Rap
+        </h2>
+        <p>Natos y Waor</p>
+        <p>Al Safir</p>
+        <p>Hard GZ</p>
+    <h2>
+        SOBRE CONCIERTOS EN MADRID
+    </h2>
+    <p>¡Bienvenido a la mejor experiencia musical en Madrid! Descubre los mejores conciertos en la vibrante capital española.</p>
+    <p>En nuestra web, te ofrecemos el portal más completo y actualizado de conciertos en Madrid. ¿Eres un amante de la música en directo? ¿Te apasiona disfrutar de las mejores actuaciones de tus artistas favoritos? ¡Estás en el lugar indicado!</p>
     <section>
         <p> Nos vemos pronto!! </p>
     </section>
+    <p>COLABORACIONES:</p>
     <section class="imagenes">
-        <p>Colaboraciones:</p>
-        <br>
+
         <img src="spoti_logo.png" alt="spotify">
         <img src="logo.png" alt="logoIH">
         <img src="logo UAX.png" alt="logoUAX">
