--- a/archivos_proyecto/inicio.html
+++ b/archivos_proyecto/inicio.html
@@ -34,6 +34,11 @@
         <p>Natos y Waor</p>
         <p>Al Safir</p>
         <p>Hard GZ</p>
+    </main>
+    <section class="imagenes">
+
+        <img src="top10.png" alt="spotify">
+    </section>
     <h2>
         SOBRE CONCIERTOS EN MADRID
     </h2>
@@ -43,7 +48,7 @@
         <p> Nos vemos pronto!! </p>
     </section>
     <p>COLABORACIONES:</p>
-    <section class="imagenes">
+    <section class="mejores">
 
         <img src="spoti_logo.png" alt="spotify">
         <img src="logo.png" alt="logoIH">
