me estaba equiv

--- a/archivos_proyecto/inicio.html
+++ b/archivos_proyecto/inicio.html
@@ -35,9 +35,9 @@
         <p>Al Safir</p>
         <p>Hard GZ</p>
     </main>
-    <section class="imagenes">
+    <section class="mejores">
 
-        <img src="top10.png" alt="spotify">
+        <img src="top10.png" alt="top10canciones">
     </section>
     <h2>
         SOBRE CONCIERTOS EN MADRID
@@ -48,7 +48,7 @@
         <p> Nos vemos pronto!! </p>
     </section>
     <p>COLABORACIONES:</p>
-    <section class="mejores">
+    <section class="imagenes">
 
         <img src="spoti_logo.png" alt="spotify">
         <img src="logo.png" alt="logoIH">
