--- a/archivos_proyecto/inicio.html
+++ b/archivos_proyecto/inicio.html
@@ -37,7 +37,7 @@
     </main>
     <section class="mejores">
 
-        <img src="top10.png" alt="top10canciones">
+        <img src="fotos/top10.png" alt="top10canciones">
     </section>
     <h2>
         SOBRE CONCIERTOS EN MADRID
@@ -50,9 +50,10 @@
     <p>COLABORACIONES:</p>
     <section class="imagenes">
 
-        <img src="spoti_logo.png" alt="spotify">
-        <img src="logo.png" alt="logoIH">
-        <img src="logo UAX.png" alt="logoUAX">
+        <img src="fotos/spoti_logo.png" alt="spotify">
+        <img src="fotos/logo.png" alt="logoIH">
+        <img src="fotos/logo UAX.png" alt="logoUAX">
+        <img scr="fotos/insta_logo.png" alt="logo Insta">
     </section>
 
     <footer>
