--- a/archivos_proyecto/conciertos.html
+++ b/archivos_proyecto/conciertos.html
@@ -29,7 +29,7 @@
                 <p>Descripción: Natos y Waor regresan a Madrid para un épico final de gira. Tras agotar las entradas para el concierto del 30 de septiembre, los artistas han decidido añadir una nueva fecha para el 4 de noviembre. ¡No te lo pierdas!</p>
             </article>
             <section class="imagen">
-                <img src="nyw_IH2.png" alt="Natos y Waor">
+                <img src="fotos/nyw_IH2.png" alt="Natos y Waor">
             </section>
             <article>
                 <h2>Al Safir</h2>
@@ -40,7 +40,7 @@
                     El artista madrileño pegó fuerte con Blow Up en 2020 y quiere más. ¡No te lo pierdas!</p>
             </article>
             <section class="imagen">
-                <img src="alsafir_IH2.png" alt="Natos y Waor">
+                <img src="fotos/alsafir_IH2.png" alt="Al Safir">
             </section>
             <article>
                 <h2>Hard GZ</h2>
@@ -51,7 +51,7 @@
                     Su próxima fecha de gira será en Madrid. ¡No te lo pierdas!</p>
             </article>
             <section class="imagen">
-                <img src="hardgz_IH2.png" alt="Natos y Waor">
+                <img src="fotos/hardgz_IH2.png" alt="Hard GZ">
             </section>
         </section>
         <footer>
