--- a/archivos_proyecto/inicio.html
+++ b/archivos_proyecto/inicio.html
@@ -53,7 +53,8 @@
         <img src="fotos/spoti_logo.png" alt="spotify">
         <img src="fotos/logo.png" alt="logoIH">
         <img src="fotos/logo UAX.png" alt="logoUAX">
-        <img scr="fotos/insta_logo.png" alt="logo Insta">
+        <img src="fotos/insta_logo.png" alt="logoUAX">
+
     </section>
 
     <footer>
