--- a/archivos_proyecto/inicio.html
+++ b/archivos_proyecto/inicio.html
@@ -35,6 +35,9 @@
         <p>Al Safir</p>
         <p>Hard GZ</p>
     </main>
+    
+    <p>¡La espera ha terminado y el momento que tanto esperabas ha llegado! En nuestro constante afán de complacer vuestros gustos musicales, estamos emocionados de anunciaros tres conciertazos inolvidables de vuestros artistas favoritos.</p>
+    <p>Preparaos para sumergiros en un mar de emociones y vibrar al ritmo de la música en vivo. Estamos deseosos de presentaros un derroche de talento, pasión y energía sobre el escenario.</p>
     <section class="mejores">
 
         <img src="fotos/top10.png" alt="top10canciones">
