--- a/archivos_proyecto/inicio.html
+++ b/archivos_proyecto/inicio.html
@@ -19,7 +19,7 @@
         
 
     </header>
-    <nav class="centrado">
+    <nav class="centro-nav">
         <ul>
             <li><a href="inicio.html" class="Inicio">Inicio</a></li>
             <li><a href="conciertos.html" class="Conciertos">Conciertos</a></li>
