--- a/archivos_proyecto/ayuda.html
+++ b/archivos_proyecto/ayuda.html
@@ -23,6 +23,14 @@
         <p>¡Gracias por confiar en nosotros!    </p>
     </header>
 
+    <nav class="centro-nav">
+        <ul>
+            <li><a href="inicio.html" class="Inicio">Inicio</a></li>
+            <li><a href="conciertos.html" class="Conciertos">Conciertos</a></li>
+            <li><a href="ayuda.html" class="Ayuda">Ayuda</a></li>
+        </ul>
+    </nav>
+    
     <section>
         <h2>Formulario de Contacto</h2>
         <form action="#" method="post">
