--- a/archivos_proyecto/conciertos.html
+++ b/archivos_proyecto/conciertos.html
@@ -13,7 +13,7 @@
                 Próximos conciertos Noviembre 2023
             </h1>
         </header>
-        <nav class="centrado">
+        <nav class="centro-nav">
             <ul>
                 <li><a href="inicio.html" class="Inicio">Inicio</a></li>
                 <li><a href="conciertos.html" class="Conciertos">Conciertos</a></li>
